--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
         hero_sub:    {HU:"Élvezze a prémium vízipipa élményt", RO:"Bucură-te de experiența premium de narghilea", EN:"Enjoy the premium shisha experience"},
         scroll_cta:  {HU:"Görgessen le a menühöz", RO:"Derulează către meniu", EN:"Scroll to the menu"},
 
-        global_bg:   "assets/smoke-bg.jpg", 
-        logo:        "assets/logo.png",
+        global_bg:   "smoke-bg.jpg", 
+        logo:        "logo.png",
 
         contact: {
           enabled: true,
@@ -1022,4 +1022,5 @@
     })();
   </script>
 </body>
+
 </html>
